# conan-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: build.rs  build_info.rs  detect.rs  install.rs  lib.rs  package.rs  profile.rs  remote.rs  util.rs
src/build_info/: build_dependency.rs  build_settings.rs  mod.rs  test.rs
src/install/: build_info.rs  profile.rs  remote.rs  test.rs
src/install/build_info/: build_dependency.rs  build_settings.rs  test.rs
src/install/remote/: test.rs
src/package/: tests.rs
src/util/: test.rs
test/: conanbuildinfo.json  conanbuildinfo2.json  conanbuildinfo3.json  conanbuildinfo4.json  conanbuildinfo5.json
