[package]
name = "conan"
version = "0.1.2"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["conan", "cmake", "build-dependencies"]
repository = "https://github.com/devolutions/conan-rs"
homepage = "https://github.com/devolutions/conan-rs"
documentation = "https://docs.rs/conan"
authors = ["Marc-André Moreau <mamoreau@devolutions.net>"]
categories = ["development-tools::build-utils"]
description = """
A Rust wrapper of the conan C/C++ package manager (conan.io) to simplify usage in build scripts
"""
edition = "2018"

[dependencies]
regex = "1.0"
which = "2.0"
indexmap = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.0"
